# thrive

./: .env.local.example  .gitignore  ARCHITECTURE_MIGRATION.md  CODE_FIXES_SUMMARY.md  PROGRESS.md  RECIPE_IMPLEMENTATION.md  debug-add-recipe.mjs  next.config.ts  package-lock.json  package.json  test-add-recipe.js  test-recipe-api.js
.github/instructions/: github-copilot instructions.instructions.md
backend/: .gitignore  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/: recipes.py
backend/app/db/: session.py
backend/app/models/: recipe.py  recipe_embedding.py  user.py
backend/app/schemas/: recipe.py  user.py
backend/app/services/: embeddings.py  recipes.py
backend/scripts/: create_embedding_table.py  seed_from_csv.py
frontend/: .env.local  next.config.ts  package-lock.json  package.json
frontend/.clerk/.tmp/: keyless.json  telemetry.json
frontend/.github/instructions/: github-copilot instruction.instructions.md
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Header.tsx  UserCheck.tsx  app-sidebar.tsx  comp-577.tsx  magic-navbar.tsx
frontend/src/lib/: api.ts  prisma.ts
prisma/: schema.prisma
src/: middleware.ts
src/app/: breadcrumb-wrapper.tsx  globals.css  layout.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/components/: Header.tsx  Hero.tsx  HowItWorks.tsx  UserCheck.tsx  app-sidebar.tsx  recipe-modal.tsx  recipe-search.tsx
src/lib/: api.ts  database-status.ts  prisma.ts
src/styles/: recipe-explorer.css
(+88 files in other folders)
